bin/tests/parser/harness/first_tokens.swg
// swc-option suite-syntax

} // swc-expected-error {{parser_err_unexpected_token}}
{ // swc-expected-error {{parser_err_expected_closing}}
;
